--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box  ;
+  font-family: 'Lexend';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logoimg{
+  animation: animate 3s linear infinite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes animate {
+  0%{
+    transform: scale(1);
+    
+  }
+  50%{
+    transform: scale(1.05);
+    
+  }
+  100%{
+    transform: scale(1);
+    
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body::-webkit-scrollbar {
+  width: 0.3em;
 }
-
-.App-link {
-  color: #61dafb;
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(45, 59, 255);
+  border-radius: 4px;
 }
